--- a/pona.html
+++ b/pona.html
@@ -17,10 +17,12 @@ var defs = Array("Emphasis", "Reptile", "Nothing");
  function fun() { 
     System.out.println("hello");
     alert("work")
-         document.getElementById("result").innerHTML = "The function fun() is triggered !"; 
+         val = document.getElementById("result")
+          System.out.println("Hello World");
+          System.out.prinln(val);
       } 
 </script>
-   <button onclick = "fun()"> click me !</button> 
+   <button onclick = "fun()">  me !</button> 
    <p> 
       <div id = "result"> </div> 
    </p> 
