--- a/pona.html
+++ b/pona.html
@@ -15,17 +15,13 @@ var words = Array("a", "akesi", "ala");
 var defs = Array("Emphasis", "Reptile", "Nothing");
 
  function fun() { 
-    System.out.println("hello");
-    alert("work")
-         val = document.getElementById("result")
-          System.out.println("Hello World");
-          System.out.prinln(val);
-      } 
+   var btn = document.getElementById(``clickMe'');
+   btn.addEventListener(``click'', alertMe);
+   function alertMe()(
+   alert(``The button has been clicked!'';
+   )
 </script>
-   <button onclick = "fun()">  me !</button> 
-   <p> 
-      <div id = "result"> </div> 
-   </p> 
+   <button id='clickMe''>Run Function</button>
 <a href="./"><button>Home</button></a>
      <br>
 <a href="./pi"><button>Wonders of Pi</button></a>
