--- a/pona.html
+++ b/pona.html
@@ -14,14 +14,13 @@
 var words = Array("a", "akesi", "ala");
 var defs = Array("Emphasis", "Reptile", "Nothing");
 
- function fun() { 
-   var btn = document.getElementById(``clickMe'');
-   btn.addEventListener(``click'', alertMe);
-   function alertMe()(
-   alert(``The button has been clicked!'';
-   )
+var btn = document.getElementById(``clickMe'');
+btn.addEventListener(``click'', alertMe);
+function alertMe()(
+alert(``The button has been clicked!'';
+)
 </script>
-   <button id='clickMe''>Run Function</button>
+   <button id='clickMe''>Run </button>
 <a href="./"><button>Home</button></a>
      <br>
 <a href="./pi"><button>Wonders of Pi</button></a>
