--- a/pona.html
+++ b/pona.html
@@ -14,13 +14,15 @@
 var words = Array("a", "akesi", "ala");
 var defs = Array("Emphasis", "Reptile", "Nothing");
 
-var btn = document.getElementById(``clickMe'');
-btn.addEventListener(``click'', alertMe);
-function alertMe()(
-alert(``The button has been clicked!'';
-)
-</script>
-   <button id='clickMe''>Run </button>
+function fun() { 
+         document.getElementById("result").innerHTML = "The function fun() is triggered !"; 
+      } 
+   </script>
+   Calling js function using HTML button <br><br>
+   <button onclick = "fun()"> click me !</button> 
+   <p> 
+      <div id = "result"> </div> 
+   </p> 
 <a href="./"><button>Home</button></a>
      <br>
 <a href="./pi"><button>Wonders of Pi</button></a>
