--- a/pona.html
+++ b/pona.html
@@ -15,11 +15,12 @@ var words = Array("a", "akesi", "ala");
 var defs = Array("Emphasis", "Reptile", "Nothing");
 
 function fun() { 
+         document.write("Hello");
          document.getElementById("result").innerHTML = "The function fun() is triggered !"; 
       } 
    </script>
    Calling js function using HTML button <br><br>
-   <button onclick = "fun()"> click me !</button> 
+   <button onclick = "fun()"> click  !</button> 
    <p> 
       <div id = "result"> </div> 
    </p> 
