--- a/pona.html
+++ b/pona.html
@@ -17,8 +17,10 @@
 </script>
 
    <p id="wordGotten">Toki word Hopefully</p>
-   <button onclick="getToki(Math.floor(Math.random() * tokiWords.length+1);">Please work</button>
-   
+   <button onclick="getToki(Math.floor(Math.random() * tokiWords.length+1));">Please </button>
+
+   <br>
+   <br>
 <a href="./"><button>Home</button></a>
      <br>
 <a href="./pi"><button>Wonders of Pi</button></a>
