--- a/pona.html
+++ b/pona.html
@@ -15,10 +15,11 @@
       const elem = document.getElementById("wordGotten");
       elem.value = val;
       elem.style.color =val
+   }
 </script>
 
    <p id="wordGotten">Toki word Hopefully</p>
-   <button onclick="getToki('Math.floor(Math.random() * tokiWords.length+1)');">Please </button>
+   <button onclick="getToki('Math.floor(Math.random() * tokiWords.length+1)');">Pleaseladsjf </button>
    <button onclick="getToki('blue');">Blue?</button>
 
    <br>
