--- a/pona.html
+++ b/pona.html
@@ -14,13 +14,13 @@
       const tokiWords = ["","a"]
       const elem = document.getElementById("wordGotten");
       elem.value = val;
-      elem.style.color =val
+      elem.style.color =val;
    }
 </script>
 
    <p id="wordGotten">Toki word Hopefully</p>
    <button onclick="getToki('Math.floor(Math.random() * tokiWords.length+1)');">Pleaseladsjf </button>
-   <button onclick="getToki('blue');">Blue?</button>
+   <button onclick="getToki('blue');">Blue</button>
 
    <br>
    <br>
