--- a/pona.html
+++ b/pona.html
@@ -12,13 +12,13 @@
 <script>
    function getToki(val){
       const tokiWords = ["","a"]
-      document.getElementById("wordGotten").value = tokiWords[val];
+      document.getElementById("wordGotten").value = tokiWords[Math.floor(Math.random() * tokiWords.length+1)];
       elem.style.color =val;
    }
 </script>
 
    <p id="wordGotten">Toki word Hopefully</p>
-   <button onclick="getToki('Math.floor(Math.random() * tokiWords.length+1)');">Please </button>
+   <button onclick="getToki();">Pleafdafse </button>
    <button onclick="getToki('blue');">Blue</button>
 
    <br>
