--- a/pona.html
+++ b/pona.html
@@ -12,14 +12,14 @@
 <script>
    function getToki(val){
       const tokiWords = ["","a"]
-      document.getElementById("wordGotten").value = tokiWords[Math.floor(Math.random() * tokiWords.length+1)];
+      return tokiWords [Math.floor((Math.random()*tokiWords.length))];
       const elem = document.getElementById("wordGotten");
       elem.style.color =val;
    }
 </script>
 
    <p id="wordGotten">Toki word Hopefully</p>
-   <button onclick="getToki();">please </button>
+   <button onclick="getToki();">please do</button>
    <button onclick="getToki('blue');">Blue</button>
 
    <br>
