--- a/pona.html
+++ b/pona.html
@@ -18,7 +18,7 @@
 </script>
 
    <p id="wordGotten">Toki word Hopefully</p>
-   <button onclick="getToki([1,2,3]);">please do</button>
+   <button onclick="getToki([1,2,3]);"> do</button>
    <button onclick="getToki('blue');">Blue</button>
 
    <br>
