--- a/pona.html
+++ b/pona.html
@@ -22,7 +22,7 @@
    
 
    <p id="wordGotten">Toki word Hopefully</p>
-   <button onclick="getToki([1,2,3]);"> do</button>
+   <button onclick="getToki([1,2,3]);"> dkfla</button>
    <button onclick="getToki('blue');">Blue</button>
 
    <br>
