--- a/pona.html
+++ b/pona.html
@@ -23,7 +23,7 @@
 
    <p id="wordGotten">Toki word Hopefully</p>
    <button onclick="getToki([1,2,3]);"> dkfla</button>
-   <button onclick="getToki('blue');">Blue</button>
+   <button onclick="changeColor('blue');">Red</button>
 
    <br>
    <br>
