--- a/pona.html
+++ b/pona.html
@@ -13,7 +13,7 @@
    function getToki(){
       let tokiWords = ["a", "akesi"];
       let word = tokiWords[Math.floor(Math.random() * myShows.length)];
-      document.getElementById("wordGotten").textContent=word;
+      document.getElementById("wordGotten").textContent="Hello";
    }
    function changeColor(col){
       const elem = document.getElementById("wordGotten");
