--- a/pona.html
+++ b/pona.html
@@ -24,7 +24,7 @@
    
 
    <p id="wordGotten">Toki word Hopefully</p>
-   <button onclick="getToki();">Please p???lse</button>
+   <button onclick="getToki();">Please lse</button>
    <button onclick="changeColor('blue');">Red</button>
 
    <br>
