--- a/pona.html
+++ b/pona.html
@@ -14,7 +14,7 @@
       let blanks = document.getElementById("wordGotten").textContent
       let tokiWords = ["a", "akesi"];
       let word = tokiWords[Math.floor(Math.random() * myShows.length)];
-      document.getElementById("wordGotten").innerText= "New Stuff";
+      document.getElementById("wordGotten").innerHTML= "New Stuff";
    }
    function changeColor(col){
       const elem = document.getElementById("wordGotten");
@@ -25,7 +25,7 @@
    
 
    <p id="wordGotten">Toki word Hopefully</p>
-   <button onclick="getToki();">Please</button>
+   <button onclick="getToki();">Pase</button>
    <button onclick="changeColor('blue');">Red</button>
 
    <br>
