--- a/pona.html
+++ b/pona.html
@@ -13,7 +13,7 @@
    function getToki(){
       let tokiWords = ["a", "akesi"];
       let word = tokiWords[Math.floor(Math.random() * tokiWords.length)];
-      document.getElementById("wordGotten").innerHTML= "New Stuff";
+      document.getElementById("wordGotten").innerHTML= word;
    }
    function changeColor(col){
       const elem = document.getElementById("wordGotten");
@@ -24,7 +24,7 @@
    
 
    <p id="wordGotten">Toki word Hopefully</p>
-   <button onclick="getToki();">LikelY?</button>
+   <button onclick="getToki();">LikY?</button>
    <button onclick="changeColor('blue');">Red</button>
 
    <br>
