--- a/pona.html
+++ b/pona.html
@@ -15,7 +15,7 @@
       let word = tokiWords[Math.floor(Math.random() * tokiWords.length)];
       document.getElementById("words").innerHTML= word;
       
-      myButton = document.getElementById(‘defBtn’);
+      let myButton = document.getElementById(‘defBtn’);
       if (tokiWords.includes(word));
          myButton.addEventListener("click",defWord(){
             document.getElementById("definition").innerHTML= word;
