--- a/pona.html
+++ b/pona.html
@@ -10,7 +10,7 @@
    
 
 <script>
-   let globalVal = -1;
+   var globalVal = -1;
    function getToki(){
       let tokiWords = ["a", "akesi", "ala", "alasa"];
       let word = tokiWords[Math.floor(Math.random() * tokiWords.length)];
@@ -36,7 +36,7 @@
    
    <p id="words"></p>
    <p id="definition"></p>
-   <button onclick="getToki();">Get Toki Pona Word</button>
+   <button onclick="getToki();">Get Toki Pona Wordf?</button>
    <button onclick="getDef();" id="defBtn">Get Toki Pona Definition</button>
 
    <br>
