--- a/pona.html
+++ b/pona.html
@@ -36,7 +36,7 @@
    
    <p id="words"></p>
    <p id="definition"></p>
-   <button onclick="getToki();">Get Toki Pona Wordf?</button>
+   <button onclick="getToki();">Get Toki Pona Word</button>
    <button onclick="getDef();" id="defBtn">Get Toki Pona Definition</button>
 
    <br>
