--- a/pona.html
+++ b/pona.html
@@ -41,7 +41,7 @@
    <br>
    <br>
    
-   <button onclick="getToki();">Get Toki Pona Word</button>
+   <button onclick="getToki();">Get Toki Pona </button>
    <button onclick="getDef();" id="defBtn">Get Toki Pona Definition</button>
 
    <br>
@@ -50,5 +50,5 @@
      <br>
 <a href="./pi"><button>Wonders of Pi</button></a>
   <br>
-  <a href="./ami"><button>Amigurumi</button></a>
+  <a href="./ami" position=fixed;><button>Amigurumi</button></a>
 </body>
