--- a/pona.html
+++ b/pona.html
@@ -13,9 +13,7 @@
    var globalVal = -1;
    function getToki(){
       document.getElementById("definition").innerHTML= "";
-      let tokiWords = ["a", "akesi", "ala", "alasa", "ale", "anpa", "ante", "anu", "awen", "e", "en", "epiku", "esun", "ijo", "ike", "ilo", "insa", "jaki", "jan", "jelo", "jo", "kala",
-                      "kalama", "kama", "kasi", "ken", "kepeken", "kili", "kin", "kipisi", "kiwen", "ko", "kon", "kule", "kulupu", "kute", "la", "lanpan", "lape", "laso", "lawa", "leko",
-                      "len", "lete", "li", "lili", "linja", "lipu", "loje", "lon", "luka", "lukin", "lupa", "ma", "mama", "mani", "meli"];
+      let tokiWords = ["a", "akesi", "ala", "alasa"];
       let wordIndex = Math.floor(Math.random() * tokiWords.length);
       globalVal=wordIndex
       let word = tokiWords[wordIndex];
@@ -51,7 +49,7 @@
    <br>
    <br>
    
-   <button onclick="getToki();">Get Toki Pona Word</button>
+   <button onclick="getToki();">Get Toki Pona </button>
    <button onclick="getDef();" id="defBtn">Get Toki Pona Definition</button>
 
    <br>
