--- a/pona.html
+++ b/pona.html
@@ -11,6 +11,7 @@
 
 <script>
    var globalVal = -1;
+   
    function getToki(){
       document.getElementById("definition").innerHTML= "";
       let tokiWords = ["a", "akesi", "ala", "alasa", "ale", "anpa", "ante", "anu", "awen", "e", "en", "epiku", "esun", "ijo", "ike", "ilo", "insa", "jaki", "jan", "jelo", "jo", "kala",
@@ -24,7 +25,7 @@
 
    function getDef(){
       let tokiDefs = ["Emphasis", "Reptile, Amphibian", "No, Nothing, Zero, Not", "Hunt, Seek, Forage", "All, Everything, Universe, Life, 100", "Downward, Lowly, Floor, Below", "Different, Altered, Changed",
-                     "Or, Choose, Decide", "Separates Verb and Direct Object", "And, Combines Multiple Subjects", "Epic, Cool, Awesome", "Market, Shop, Bazaar, Business Transactions"
+                     "Or, Choose, Decide", "Separates Verb and Direct Object", "And", "Combines Multiple Subjects", "Epic, Cool, Awesome", "Market, Shop, Bazaar, Business Transactions"
                      "Thing, Phenomenon, Object", "Bad, Negative, Complicated", "Tool, Implement, Machine", "Center, Inside, Internal Organs, Stomach", "Gross, Obscene, Unclean", "Human Being, Person, Somebody",
                      "Yellow", "Have, Carry, Hold", "Fish, Marine Animal", "Produce Sound, Utterance, Recite", "Arriving, Coming, Future, Become", "Plant, Vegetation, Herb, Leaf", "Able to, Can, May, Possible", 
                      "To Use, With, By Means Of", "Fruit, Vegetable, Mushroom", "Also, Indeed", "Split, Cut, Sever, Sharp", "Hard Object, Metal, Rock, Stone", "Clay, Dough, Powder", "Air, Breath, Essence, Spirit",
@@ -51,8 +52,8 @@
    <br>
    <br>
    
-   <button onclick="getToki();">Get Toki Pona Word</button>
-   <button onclick="getDef();" id="defBtn">Get Toki Pona Definition</button>
+   <button onclick="getToki();">Get Toki Pona </button>
+   <button onclick="getDef();">Get Toki Pona Definition</button>
 
    <br>
    <br>
