--- a/pona.html
+++ b/pona.html
@@ -25,7 +25,7 @@
 
    function getDef(){
       let tokiDefs = ["Emphasis", "Reptile, Amphibian", "No, Nothing, Zero, Not", "Hunt, Seek, Forage", "All, Everything, Universe, Life, 100", "Downward, Lowly, Floor, Below", "Different, Altered, Changed",
-                     "Or, Choose, Decide", "Separates Verb and Direct Object", "And, Combines Multiple Subjects", "Epic, Cool, Awesome", "Market, Shop, Bazaar, Business Transactions",
+                     "Or, Choose, Decide", "Enduring, Kept, Safe, Waiting", "Separates Verb and Direct Object", "And, Combines Multiple Subjects", "Epic, Cool, Awesome", "Market, Shop, Bazaar, Business Transactions",
                      "Thing, Phenomenon, Object", "Bad, Negative, Complicated", "Tool, Implement, Machine", "Center, Inside, Internal Organs, Stomach", "Gross, Obscene, Unclean", "Human Being, Person, Somebody",
                      "Yellow", "Have, Carry, Hold", "Fish, Marine Animal", "Produce Sound, Utterance, Recite", "Arriving, Coming, Future, Become", "Plant, Vegetation, Herb, Leaf", "Able to, Can, May, Possible", 
                      "To Use, With, By Means Of", "Fruit, Vegetable, Mushroom", "Also, Indeed", "Split, Cut, Sever, Sharp", "Hard Object, Metal, Rock, Stone", "Clay, Dough, Powder", "Air, Breath, Essence, Spirit",
@@ -52,7 +52,7 @@
    <br>
    <br>
    
-   <button onclick="getToki();">Get Toki Pona Woprd</button>
+   <button onclick="getToki();">Get Toki Pona Word</button>
    <button onclick="getDef();">Get Toki Pona Definition</button>
 
    <br>
