--- a/pona.html
+++ b/pona.html
@@ -18,7 +18,8 @@
                       "kalama", "kama", "kasi", "ken", "kepeken", "kili", "kin", "kipisi", "kiwen", "ko", "kon", "kule", "kulupu", "kute", "la", "lanpan", "lape", "laso", "lawa", "leko",
                       "len", "lete", "li", "lili", "linja", "lipu", "loje", "lon", "luka", "lukin", "lupa", "ma", "mama", "mani", "meli", "meso", "mi", "mije", "misikeke", "moku", "moli",
                       "monsi", "monsuta", "mu", "mun", "musi", "mute", "namako", "nanpa", "nasa", "nasin", "nena", "ni", "nimi", "noka", "o", "olin", "ona", "open", "pakala", "pali", "palisa",
-                      "pan", "pana", "pi", "pilin", "pimeja", "pini", "pipi", "poka", "poki", "pona", "sama", "seli", "selo", "seme", "sewi", "sijelo", "sike", "sin", "sina"];
+                      "pan", "pana", "pi", "pilin", "pimeja", "pini", "pipi", "poka", "poki", "pona", "sama", "seli", "selo", "seme", "sewi", "sijelo", "sike", "sin", "sina", "sinpin", "sitelen", "soko",
+                      "sona", "soweli", "suli", "suno", "supa", "suwi", "tan", "taso", "tawa", "telo", "tenpo", "toki"];
       let wordIndex = Math.floor(Math.random() * tokiWords.length);
       globalVal=wordIndex
       let word = tokiWords[wordIndex];
@@ -40,7 +41,8 @@
                      "Hey!", "Love, Have Compassion For, Respect", "He, She, It, They", "Begin, Open, Turn On", "Broken, Harmed, Expletive", "Do, Take Action, Build", "Long Hard Thing, Stick, Branch", "Cereal, Bread, Grain",
                      "Give, Send, Emit, Release", "Of, Divides Noun Group That Describes First Noun Group", "Heart, Feeling, Emotion", "Black, Dark, Unlit", "Ago, Completed, Past", "Bug, Insect, Spider", "Hip, Next To, Beside",
                      "Container, Bowl, Vessel", "Good, Peaceful, Simple", "Same, Similar, Peer, Sibling", "Fire, Cooking Element, Heat", "Outer Form, Shell, Skin", "What, Which", "Area Above, Higher Up, Divine, Sacred", "Body, Physical State, Torso",
-                     "Round, Circular, Ball, Wheel", "New, Additional, Fresh", "You"];
+                     "Round, Circular, Ball, Wheel", "New, Additional, Fresh", "You", "Face, Foremost, Front, Wall", "Image, Picture, Symbol, Writing", "Fungus, Fungi", "Know, Be Skilled At, Information", "Animal, Land Mammal", "Big, Heavy, Important, Tall",
+                     "Sun, Brightness, Light Source", "Horizontal Surface, Thing to Rest On", "Sweet, Cute, Fragrant", "By, From, Because Of", "But, However, Only", "Going To, Forward, Moving", "Water, Fluid, Beverages", "Time, Duration, Period, Situation", "Communicate, Speak, Think, Hello"];
       if (globalVal >= 0){
          let defs = tokiDefs[globalVal];
          document.getElementById("definition").innerHTML=defs;
