--- a/pona.html
+++ b/pona.html
@@ -66,7 +66,7 @@
 
 </script>
 
-   //Gives text spots for the functions to change
+   <!--Gives text spots for the functions to change-->
    <p id="words">  </p>
    <p id="definition">  </p>
    <br>
