--- a/pona.html
+++ b/pona.html
@@ -15,7 +15,7 @@
    
    function getToki(){
       //Resets the definition text
-      document.getElementById("definition").innerHTML= "  ";
+      document.getElementById("definition").innerHTML= "‎";
       //Defines list of all toki pona words
       let tokiWords = ["a", "akesi", "ala", "alasa", "ale", "anpa", "ante", "anu", "awen", "e", "en", "epiku", "esun", "ijo", "ike", "ilo", "insa", "jaki", "jan", "jelo", "jo", "kala",
                       "kalama", "kama", "kasi", "ken", "kepeken", "kili", "kin", "kipisi", "kiwen", "ko", "kon", "kule", "kulupu", "kute", "la", "lanpan", "lape", "laso", "lawa", "leko",
@@ -67,8 +67,8 @@
 </script>
 
    <!--Gives text spots for the functions to change-->
-   <p id="words">  </p>
-   <p id="definition">  </p>
+   <p id="words">‎</p>
+   <p id="definition">‎</p>
    <br>
    <br>
    
