--- a/pona.html
+++ b/pona.html
@@ -28,7 +28,7 @@
       globalVal=wordIndex
       //Changes word text to be the randomly chosen toki pona word
       let word = tokiWords[wordIndex];
-      document.getElementById("words").innerHTML= word;
+      document.getElementById("words").innerHTML= tokiWords.length;
    }
 
    function getDef(){
